Make layout more accessible for small viewports - Includes changes to handle the layout better for different users with access needs. - Add "back to top" link at the end of content. - Changed fixed position navigation and footer to only on tall viewports. - Remove height on main element so that the content isn't overlapped.

--- a/src/_sass/_layout.scss
+++ b/src/_sass/_layout.scss
@@ -5,14 +5,23 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-padding-top: calc( navbar.$height + 1.5em );
+}
+
+html, body {
+  height: 100%;
+}
+
 main {
-  margin-top: navbar.$height;
-  height: calc(100vh - navbar.$height);
   display: flex;
   flex-direction: column;
 
   @include breakpoints.on-large-screens {
-    height: calc(100vh - navbar.$height - 3em);
     flex-direction: row;
+  }
+
+  @include breakpoints.on-tall-screens {
+    margin-top: navbar.$height;
   }
 }
